wmd editor is now in place

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -4,6 +4,7 @@ html
     title YoMobi
     = stylesheet_link_tag 'builder-app'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
+    = stylesheet_link_tag 'wmd'
   body
     #global-container
       #header
