--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -76,8 +76,8 @@
     #dialog-confirm title="Name your Page"
       p
         | Please name your Page:
-        input.item-input type="text" value="{{ name }}" name="name"
-        input.item-input type="hidden"
+        input.item-input type="text" name="name" value="{{ name }}"
+        input.item-input type="hidden" name="markdown" value="This is a paragraph. **This is bold.**&#010;&#010;Another paragraph. *This is italic.*&#010;&#010;----------&#010;# HUGE Header&#010;## Normal Header&#010;### Small Header&#010;"
         | <% if(_maybe.error) { %>
         p.error Error: {{ _maybe.error }}
         | <% } %>
@@ -198,7 +198,7 @@
       .leaf-arrow
       | {{ items[i].name }}
     | <% } } else { %>
-    h2 {{ title }}
+    h1 {{ title }}
     .leaf-content {{ html }}
     | <% } %>
 
@@ -361,5 +361,6 @@
     | <% } else { %>
     p {{ catCrumbs }}
     h2 Editing Page: {{ currentCat }}
-    textarea.leaf-markdown {{ markdown }}
+    #wmd-button-bar
+    textarea#wmd-input.leaf-markdown {{ markdown }}
     | <% } %>
