Added focus highlight to widget being edited

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -1,3 +1,6 @@
+.home-icon.editing {
+  background-color: #ddef34; }
+
 #builder-container {
   background: #edeff4;
   border-top: 1px solid #b3b3b3;
