--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -1,5 +1,8 @@
 @import 'constants'
 
+.home-icon.editing
+  background-color: #DDEF34
+
 #builder-container
   background: $light-bg-color
   border-top: 1px solid #B3B3B3
