--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -3,13 +3,13 @@ $dynamic-width: 320px
 $color-topbar: #3B5998
 
 body
-  font-family: 'lucida grande', tahoma, verdana, arial, sans-serif
   margin: 0
   padding: 0
 
 #mobile-container
   width: $dynamic-width
   overflow: hidden
+  font-family: 'lucida grande', tahoma, verdana, arial, sans-serif
 
 #canvas
   position: relative
@@ -21,6 +21,7 @@ body
     width: $dynamic-width
     .content
       padding: 0 4px
+      font-size: 16px
 
 .top-bar
   width: $dynamic-width - 16px
