--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -194,3 +194,13 @@
 
 .ui-timepicker-div td {
   font-size: 90%; }
+
+#wname-test {
+  position: absolute;
+  visibility: hidden;
+  overflow: hidden;
+  height: auto;
+  width: 68px;
+  text-align: center;
+  font-size: 14px;
+  font-family: "lucida grande", tahoma, verdana, arial, sans-serif; }
