--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -198,3 +198,14 @@
   margin: -25px 0 10px 65px
 .ui-timepicker-div td
   font-size: 90%
+
+#wname-test
+  position: absolute
+  visibility: hidden
+  overflow: hidden
+  
+  height: auto
+  width: 68px
+  text-align: center
+  font-size: 14px
+  font-family: "lucida grande", tahoma, verdana, arial, sans-serif
