Added ui for tabs and ads

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -93,10 +93,12 @@
 
   script.widget-page(type="text/template")
     .page
-      .top-bar
+      .back-bar
         .back-btn
         .title
       .content
+      .ad-bar
+        img src="/images/brandSample04.jpeg"
   
   #dialog-invalid-drag title="Oops"
     p
