--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -1,12 +1,24 @@
+#top-bar
+  .company-info
+    .logo
+    .name
+  .tab-bar
+    .tab.active Home
+    .tab Profile
+    .tab Friends
+    .tab Inbox (2)
+    .clearfix
+  .ad-bar
+    img src="/images/brandSample04.jpeg"
 #canvas
   #home.page
-    #company-info.top-bar
-      .logo
-      .name
-    .clearfix
     #home-widgets.content.dbx-group
+    .ad-bar
+      img src="/images/brandSample04.jpeg"
   .page
-    .top-bar
+    .back-bar
       .back-btn
       .title
     .content
+    .ad-bar
+      img src="/images/brandSample04.jpeg"
