Fixed weird page transition behavior

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -3,7 +3,7 @@
     .logo
     .name
   .tab-bar
-    .tab.active Home
+    a.tab.active href="#" Home
     .tab Profile
     .tab Friends
     .tab Inbox (2)
