--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -46,7 +46,11 @@ body
   background: $color-topbar
   color: #fff
   padding: 0 4px
+  a, a:visited
+    color: #fff
+    text-decoration: none
   .tab
+    display: block
     float: left
     width: ($emulator-width - 8) / 4
     height: 24px
