Added jwysiwyg and scrollbar

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -4,7 +4,7 @@ html
     title YoMobi
     = stylesheet_link_tag 'builder-app'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
-    = stylesheet_link_tag 'wmd'
+    = stylesheet_link_tag 'jquery.wysiwyg'
   body
     #global-container
       #header
@@ -50,5 +50,4 @@ html
     = javascript_include_tag 'mobile-app'
     = javascript_include_tag 'builder-app'
     
-    = javascript_include_tag 'support/showdown.js'
-    = javascript_include_tag 'support/wmd.js'
+    = javascript_include_tag 'support/jquery.wysiwyg'
