--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -4,7 +4,10 @@
     .name
   .tab-bar
     a.tab.active href="#" Home
-    .tab Profile
+    .tab
+      | Hours of
+      br
+      | Operation
     .tab Friends
     .tab Inbox (2)
     .clearfix
