--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -96,6 +96,15 @@
 #emulator.drophover .drophover-overlay
   display: block
 
+#emulator
+  overflow: hidden
+  height: 480px
+
+#mobile-scroller
+  overflow-y: scroll
+  height: 480px
+  width: 335px
+
 /////////////////////////////
 // Widget-specific styling //
 /////////////////////////////
@@ -178,6 +187,8 @@
   padding-top: 0
   select
     width: 97%
+  #jeditor-wrapper
+    width: 324px
 
 #dialog-confirm
   .error
