--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -47,8 +47,8 @@ body {
     display: block;
     float: left;
     width: 78px;
-    height: 24px;
     padding-top: 6px;
+    padding-bottom: 6px;
     text-align: center;
     font-weight: bold;
     font-size: 12px; }
