--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -52,9 +52,9 @@ body
   .tab
     display: block
     float: left
-    width: ($emulator-width - 8) / 4
-    height: 24px
+    width: ($emulator-width - 8 - 15) / 4
     padding-top: 6px
+    padding-bottom: 6px
     text-align: center
     font-weight: bold
     font-size: 12px
