Improved tab bar behavior

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -3,14 +3,13 @@
     .logo
     .name
   .tab-bar
-    a.tab.active href="#" Home
-    .tab
-      | Hours of
-      br
-      | Operation
-    .tab Friends
-    .tab Inbox (2)
-    .clearfix
+    table
+      tr
+        td.active
+          a href="#" Home
+        td Hours of Operation
+        td Friends
+        td Inbox (2)
   .ad-bar
     img src="/images/brandSample04.jpeg"
 #canvas
