--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -46,19 +46,18 @@ body
   background: $color-topbar
   color: #fff
   padding: 0 4px
+  table
+    width: 100%
   a, a:visited
     color: #fff
     text-decoration: none
-  .tab
-    display: block
-    float: left
+  td
     width: ($emulator-width - 8 - 15) / 4
-    padding-top: 6px
-    padding-bottom: 6px
+    padding: 6px 0
     text-align: center
     font-weight: bold
     font-size: 12px
-  .tab:hover, .tab.active
+  td:hover, td.active
     background: $secondary-color
     cursor: pointer
 
