Scrollbar now hides when not being used

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -5,15 +5,16 @@
 h1 Chipotle
 #builder-container
   #builder
-    #emulator.portrait
-      #mobile-scroller
-        #mobile-container
-          = render 'shared/mobile-render'
-          .loader-overlay
-            .icon
-          .drophover-overlay
-            .icon
-            .text Add to Mobile Site
+    #emulator-wrapper
+      #emulator.portrait
+        #mobile-scroller
+          #mobile-container
+            = render 'shared/mobile-render'
+            .loader-overlay
+              .icon
+            .drophover-overlay
+              .icon
+              .text Add to Mobile Site
     .widget-editor
       h1 Click an icon
       h2 in the Emulator to begin editing
