--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -69,6 +69,26 @@
     input[type=text]
       font-size: 2.5em
 
+#emulator-wrapper
+  float: left
+  width: $emulator-width
+
+#emulator
+  border: 4px solid #1D4088
+  background: $light-bg-color
+
+#emulator-scroller
+  width: 335px
+  height: 480px
+
+#emulator.portrait
+  width: $emulator-width
+  min-height: 480px
+
+#emulator.landscape
+  width: 480px
+  height: $emulator-width
+
 #emulator .loader-overlay
   position: absolute
   width: 320px
