Widget names are now properly wrapped

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -61,7 +61,7 @@ bdata = {
   },
   
   "hours": {
-    name: "hours-of-operation",
+    name: "operation-hours",
     wtype: 'hours',
     helpText: "Let your customers know when you're open for business."
   },
