Home tab now works in builder

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -5,7 +5,7 @@
   .tab-bar
     table
       tr
-        td.active
+        td.active.go-home
           a href="#" Home
         td Hours of Operation
         td Friends
