Added facebook widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -42,6 +42,12 @@ bdata = {
     helpText: "Add a link from your YoMobi mobile website to your full website."
   },
   
+  "link_fb": {
+    name: "facebook-page",
+    wtype: 'link_fb',
+    helpText: "Add a one-tap link to your businesses's Facebook page."
+  },
+  
   "custom_page": {
     name: "about-us",
     wtype: 'custom_page',
