Added twitter widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -48,6 +48,12 @@ bdata = {
     helpText: "Add a one-tap link to your businesses's Facebook page."
   },
   
+  "link_twitter": {
+    name: "twitter-page",
+    wtype: 'link_twitter',
+    helpText: "Add a one-tap link to your businesses's Twitter page."
+  },
+  
   "custom_page": {
     name: "about-us",
     wtype: 'custom_page',
