--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -2,7 +2,7 @@
 
   script.home-icon(type="text/template")
     .inner
-      .icon.dbx-handle{ style="background-image: url(/images/widgets/{{ wtype }}.png)" }
+      .icon.dbx-handle{ style="background-image: url(/images/widgets/{{ iconName }}.png)" }
       .title {{ prettyName }}
   
   script.mapp-header(type="text/template")
@@ -19,7 +19,7 @@
   
   script.edit-widget(type="text/template")
     .header
-      .icon{ style="background-image: url(/images/widgets/{{ wtype }}.png)" }
+      .icon{ style="background-image: url(/images/widgets/{{ iconName }}.png)" }
       .widget-name-edit
         input type="text" name="wname" value="{{ prettyName }}"
       .widget-name
@@ -40,7 +40,7 @@
 
   script.sidebar-widget(type="text/template")
     .sidebar.home-icon data-name="{{ name }}" data-wtype="{{ wtype }}"
-      .icon{ style="background-image: url(/images/widgets/{{ wtype }}.png)" }
+      .icon{ style="background-image: url(/images/widgets/{{ iconName }}.png)" }
       .title {{ prettyName }}
   
   script.add-widget-dialog(type="text/template")
@@ -250,6 +250,11 @@
     label Enter your website's address [e.g. www.mysite.com]:
     input(name="url" type="text" value="{{ _maybe.url }}")
   
+  / singleton /
+  script.picasa-edit-area(type="text/template")
+    label Enter your Picasa web url:
+    input(name="url" type="text" value="{{ _maybe.url }}")
+  
   script.link_fb-edit-area(type="text/template")
     h3 Current Link
     p
@@ -338,7 +343,7 @@
     label Paste your "Embed this Calendar" link here:
     textarea(name="paste" type="text") {{ _maybe.description }}
   
-  script.category-edit-area(type="text/template")
+  script.restaurant-menu-edit-area(type="text/template")
     h2 {{ currentCat }}
     label Sub-Categories:
     br
