Added services and products widgets

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -95,6 +95,20 @@ bdata = [
   },
   
   {
+    name: "services",
+    wtype: 'category',
+    helpText: "Give your customers instant access to your list of services.",
+    singleton: true
+  },
+  
+  {
+    name: "products",
+    wtype: 'category',
+    helpText: "Give your customers instant access to your list of products.",
+    singleton: true
+  },
+  
+  {
     name: "category",
     wtype: 'page_tree',
     helpText: "Create your own mobile site map of custom pages."
