--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -6,6 +6,10 @@ body
   font-size: 11px
   overflow-y: scroll
 
+p.notice, p.alert
+  text-align: center
+  font-size: 16px
+
 #page-container
   width: $page-width
   margin: 0 auto
