--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -7,9 +7,9 @@
       tr
         td.active.go-home
           a href="#" Home
-        td Hours of Operation
-        td Friends
-        td Inbox (2)
+        td.wtab
+        td.wtab
+        td.wtab
   .ad-bar
     img src="/images/brandSample04.jpeg"
 #canvas
