--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -25,6 +25,11 @@
     .help-text
       padding: 0 20px 0 72px
       margin-top: 5px
+  .header.edit-tab-bar
+    .help-text, .widget-name
+      padding-left: 0
+      cursor: auto
+  
   .edit-area
     padding: 20px 20px
     textarea, input[type=text]
